added revision-history icon to icon list

--- a/modules/ROOT/partials/configuration/icon_list.adoc
+++ b/modules/ROOT/partials/configuration/icon_list.adoc
@@ -128,6 +128,7 @@
 | `+reload+` | image:icons/reload.svg[reload.svg] | `+reload.svg+`
 | `+remove-formatting+` | image:icons/remove-formatting.svg[remove-formatting.svg] | `+remove-formatting.svg+`
 | `+remove+` | image:icons/remove.svg[remove.svg] | `+remove.svg+`
+| `+revision-history+` | image:icons/revision-history.svg[revision-history.svg] | `+revision-history.svg+`
 | `+resize-handle+` | image:icons/resize-handle.svg[resize-handle.svg] | `+resize-handle.svg+`
 | `+resize+` | image:icons/resize.svg[resize.svg] | `+resize.svg+`
 | `+restore-draft+` | image:icons/restore-draft.svg[restore-draft.svg] | `+restore-draft.svg+`
