added revisionhistory plugin entries to nav.adoc and premium-plugins.adoc

--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -323,6 +323,20 @@
 **** xref:powerpaste-troubleshooting.adoc[Troubleshooting]
 *** Spell Checker
 **** xref:introduction-to-tiny-spellchecker.adoc[Spell Checker]
+*** Real-Time Collaboration (RTC)
+**** xref:rtc-introduction.adoc[Introduction]
+**** xref:rtc-supported-functionality.adoc[Supported Functionality]
+**** xref:rtc-getting-started.adoc[Getting started with RTC]
+**** xref:rtc-encryption.adoc[Encryption Setup]
+**** xref:rtc-jwt-authentication.adoc[JWT Authentication Setup]
+**** Configuration options
+***** xref:rtc-options-overview.adoc[Configuration options overview]
+***** xref:rtc-options-required.adoc[Required configuration options]
+***** xref:rtc-options-optional.adoc[Recommended and optional configuration options]
+**** xref:rtc-events.adoc[RTC Events]
+**** xref:how-the-rtc-plugin-encrypts-content.adoc[How RTC encrypts content]
+**** xref:rtc-troubleshooting.adoc[RTC Troubleshooting]
+*** xref:revisionhistory.adoc[Revision History]
 **** xref:custom-dictionaries-for-tiny-spellchecker.adoc[Adding custom dictionaries]
 *** xref:autocorrect.adoc[Spelling Autocorrect]
 *** xref:tableofcontents.adoc[Table of Contents]
