--- a/modules/ROOT/partials/index-pages/premium-plugins.adoc
+++ b/modules/ROOT/partials/index-pages/premium-plugins.adoc
@@ -135,6 +135,17 @@ xref:introduction-to-tiny-spellchecker.adoc[Spell Checker]
 
 Check spelling as-you-type in {productname}.
 
+xref:rtc-introduction.adoc[Real-time collaboration]
+
+The Real-time Collaboration plugin for {productname}.
+
+a|
+[.lead]
+xref:revisionhistory.adoc[Revision History]
+
+Visually track document changes over time.
+
+
 a|
 [.lead]
 xref:autocorrect.adoc[Spelling Autocorrect]
@@ -165,7 +176,7 @@ Cloud-based file and image management for {productname}.
 //    odd.
 // 2. Prepend the inline comment markup to this element
 //    when the number of cells in the table is even.
-a|
+// a|
 
 |===
 
