added toolbar button docs for revisionhistory plugin

--- a/modules/ROOT/pages/available-toolbar-buttons.adoc
+++ b/modules/ROOT/pages/available-toolbar-buttons.adoc
@@ -197,6 +197,11 @@ include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
 :plugincode: quickbars
 include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
 
+:plugincategory: premium
+:pluginname: Revision History
+:plugincode: revisionhistory
+include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
+
 :plugincategory: opensource
 :pluginname: Save
 :plugincode: save
