DOC-2268: Add new plugin documentation for ExportWord Premium Plugin for TinyMCE 7.0.

--- a/modules/ROOT/partials/index-pages/premium-plugins.adoc
+++ b/modules/ROOT/partials/index-pages/premium-plugins.adoc
@@ -77,6 +77,12 @@ Export content from {productname} into various formats.
 
 a|
 [.lead]
+xref:exportword.adoc[Export Word]
+
+Exports editor content from into `.docx` file format to local disk.
+
+a|
+[.lead]
 xref:footnotes.adoc[Footnotes]
 
 Insert intext footnotes and add footnote entries.
