improvements to revisionhistory.adoc

--- a/-new-material-templates/plugin-documentation-templates/ROOT/pages/pluginpage.adoc
+++ b/-new-material-templates/plugin-documentation-templates/ROOT/pages/pluginpage.adoc
@@ -123,13 +123,13 @@ include::partial$commands/{plugincode}-cmds.adoc[]
 
 == Events
 
-The {{pluginname}} plugin provides the following events.
+The {pluginname} plugin provides the following events.
 
 include::partial$events/{plugincode}-events.adoc[]
 
 == APIs
 
-The {{pluginname}} plugin provides the following APIs.
+The {pluginname} plugin provides the following APIs.
 
 include::partial$plugin-apis/{plugincode}-apis.adoc[]
 
