improvements to revisionhistory configuration options

--- a/modules/ROOT/pages/revisionhistory.adoc
+++ b/modules/ROOT/pages/revisionhistory.adoc
@@ -61,11 +61,11 @@ liveDemo::{plugincode}[]
 
 The following configuration options affect the behavior of the {pluginname} plugin.
 
-// include::partial$configuration/revisionhistory_fetch.adoc[][leveloffset=+1]
+include::partial$configuration/revisionhistory_fetch.adoc[leveloffset=+1]
 
-// include::partial$configuration/revisionhistory_css_url.adoc[][leveloffset=+1]
+include::partial$configuration/revisionhistory_css_url.adoc[leveloffset=+1]
 
-// include::partial$configuration/revisionhistory_diff_classes.adoc[][leveloffset=+1]
+include::partial$configuration/revisionhistory_diff_classes.adoc[leveloffset=+1]
 
 include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
 
