removed more references to template plugin

--- a/modules/ROOT/pages/basic-setup.adoc
+++ b/modules/ROOT/pages/basic-setup.adoc
@@ -208,7 +208,7 @@ The following example is a basic {productname} configuration.
     plugins: [
       'advlist', 'autolink', 'link', 'image', 'lists', 'charmap', 'preview', 'anchor', 'pagebreak',
       'searchreplace', 'wordcount', 'visualblocks', 'visualchars', 'code', 'fullscreen', 'insertdatetime',
-      'media', 'table', 'emoticons', 'template', 'help'
+      'media', 'table', 'emoticons', 'help'
     ],
     toolbar: 'undo redo | styles | bold italic | alignleft aligncenter alignright alignjustify | ' +
       'bullist numlist outdent indent | link image | print preview media fullscreen | ' +
@@ -254,7 +254,7 @@ Selects the plugins to be included on load.
 plugins: [
   'advlist', 'autolink', 'link', 'image', 'lists', 'charmap', 'preview', 'anchor', 'pagebreak',
   'searchreplace', 'wordcount', 'visualblocks', 'visualchars', 'code', 'fullscreen', 'insertdatetime',
-  'media', 'table', 'emoticons', 'template', 'help'
+  'media', 'table', 'emoticons', 'help'
 ],
 ----
 
