--- a/modules/ROOT/pages/editor-command-identifiers.adoc
+++ b/modules/ROOT/pages/editor-command-identifiers.adoc
@@ -2,7 +2,7 @@
 :navtitle: Available Commands
 :description_short: Complete list of editor commands.
 :description: The complete list of exposed editor commands.
-:keywords: editorcommands, editorcommand, execcommand, Bold, Italic, Underline, Strikethrough, Superscript, Subscript, Cut, Copy, Paste, Unlink, JustifyLeft, JustifyCenter, JustifyRight, JustifyFull, JustifyNone, InsertUnorderedList, InsertOrderedList, ForeColor, HiliteColor, FontName, FontSize, InsertNewBlockBefore, InsertNewBlockAfter, RemoveFormat, mceBlockQuote, FormatBlock, mceInsertContent, mceToggleFormat, mceSetContent, Indent, Outdent, InsertHorizontalRule, mceToggleVisualAid, mceInsertLink, selectAll, delete, mceNewDocument, Undo, Redo, mceAutoResize, mceShowCharmap, mceCodeEditor, mceDirectionLTR, mceDirectionRTL, mceFullscreen, mceImage, mceInsertDate, mceInsertTime, mceInsertDefinitionList, mceNonBreaking, mcePageBreak, mcePreview, mcePrint, mceSave, SearchReplace, mceInsertTemplate, mceVisualBlocks, mceVisualChars, mceMedia, mceAnchor, mceTableSplitCells, mceTableMergeCells, mceTableInsertRowBefore, mceTableInsertRowAfter, mceTableInsertColBefore, mceTableInsertColAfter, mceTableDeleteCol, mceTableDeleteRow, mceTableCutRow, mceTableCopyRow, mceTablePasteRowBefore, mceTablePasteRowAfter, mceTableDelete, mceInsertTable, mceTableRowProps, mceTableCellProps, mceEditImage, mceAddEditor, mceRemoveEditor, mceToggleEditor, mceAutocompleterClose, mceAutocompleterReload
+:keywords: editorcommands, editorcommand, execcommand, Bold, Italic, Underline, Strikethrough, Superscript, Subscript, Cut, Copy, Paste, Unlink, JustifyLeft, JustifyCenter, JustifyRight, JustifyFull, JustifyNone, InsertUnorderedList, InsertOrderedList, ForeColor, HiliteColor, FontName, FontSize, InsertNewBlockBefore, InsertNewBlockAfter, RemoveFormat, mceBlockQuote, FormatBlock, mceInsertContent, mceToggleFormat, mceSetContent, Indent, Outdent, InsertHorizontalRule, mceToggleVisualAid, mceInsertLink, selectAll, delete, mceNewDocument, Undo, Redo, mceAutoResize, mceShowCharmap, mceCodeEditor, mceDirectionLTR, mceDirectionRTL, mceFullscreen, mceImage, mceInsertDate, mceInsertTime, mceInsertDefinitionList, mceNonBreaking, mcePageBreak, mcePreview, mcePrint, mceSave, SearchReplace, mceVisualBlocks, mceVisualChars, mceMedia, mceAnchor, mceTableSplitCells, mceTableMergeCells, mceTableInsertRowBefore, mceTableInsertRowAfter, mceTableInsertColBefore, mceTableInsertColAfter, mceTableDeleteCol, mceTableDeleteRow, mceTableCutRow, mceTableCopyRow, mceTablePasteRowBefore, mceTablePasteRowAfter, mceTableDelete, mceInsertTable, mceTableRowProps, mceTableCellProps, mceEditImage, mceAddEditor, mceRemoveEditor, mceToggleEditor, mceAutocompleterClose, mceAutocompleterReload
 
 == Overview
 
@@ -244,8 +244,7 @@ Commands are available for the following plugins:
 * xref:searchandreplace[Search and Replace]
 * xref:spellcheckerpro[Spell Checker Pro]
 * xref:table[Table]
-* xref:tableofcontents[Table of Contents]
-* xref:template[Template]
+* xref:tableofcontents[Table of Content]
 * xref:visualblocks[Visual Blocks]
 * xref:visualcharacters[Visual Characters]
 * xref:wordcount[Word Count]
