DOC-2266: Add new documenation for ExportPDF plugin.

--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -305,6 +305,7 @@
 **** xref:mediaembed-server-config.adoc[Configure Enhanced Media Embed Server]
 **** xref:mediaembed-server-integration.adoc[Integrate Enhanced Media Embed Server]
 *** xref:export.adoc[Export]
+*** xref:exportpdf.adoc[Export PDF]
 *** xref:footnotes.adoc[Footnotes]
 *** xref:formatpainter.adoc[Format Painter]
 *** xref:inline-css.adoc[Inline CSS]
