--- a/modules/ROOT/partials/index-pages/premium-plugins.adoc
+++ b/modules/ROOT/partials/index-pages/premium-plugins.adoc
@@ -77,6 +77,12 @@ Export content from {productname} into various formats.
 
 a|
 [.lead]
+xref:exportpdf.adoc[Export PDF]
+
+Export and generate content from {productname} into `document.pdf` format.
+
+a|
+[.lead]
 xref:footnotes.adoc[Footnotes]
 
 Insert intext footnotes and add footnote entries.
