added admonition about inline mode not supported

--- a/modules/ROOT/pages/revisionhistory.adoc
+++ b/modules/ROOT/pages/revisionhistory.adoc
@@ -9,8 +9,12 @@
 
 include::partial$misc/admon-premium-plugin.adoc[]
 
-include::partial$misc/admon-requires-6.8v.adoc[]
-// TODO: change to 7.0v when admonition is available
+include::partial$misc/admon-requires-7.0v.adoc[]
+
+include::partial$misc/admon-iframe-only.adoc[]
+// TODO: move to a more appropriate location
+
+
 
 // TODO: Add an introduction. What does the plugin do? Why would I use this plugin? Keep it concise.
 
