add documentation for addView API

--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -177,6 +177,7 @@
 *** xref:autocompleter.adoc[Autocompleter]
 *** xref:creating-custom-notifications.adoc[Notifications]
 *** xref:customsidebar.adoc[Sidebars]
+*** xref:custom-view.adoc[Views]
 *** xref:contextform.adoc[Context forms]
 *** xref:contextmenu.adoc[Context menus]
 *** xref:contexttoolbar.adoc[Context toolbar]
