--- a/modules/ROOT/partials/misc/premium-plugin-list.adoc
+++ b/modules/ROOT/partials/misc/premium-plugin-list.adoc
@@ -12,6 +12,7 @@
 * xref:formatpainter.adoc[Format Painter]
 * xref:inline-css.adoc[Inline CSS]
 * xref:linkchecker.adoc[Link Checker]
+* xref:markdown.adoc[Markdown]
 * xref:mentions.adoc[Mentions]
 * xref:mergetags.adoc[Merge Tags]
 * xref:moxiemanager.adoc[MoxieManager]
