DOC-2268: add toolbar and menu-items, updated icon.svg file and various file corrections.

--- a/modules/ROOT/pages/available-toolbar-buttons.adoc
+++ b/modules/ROOT/pages/available-toolbar-buttons.adoc
@@ -129,6 +129,11 @@ include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
 include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
 
 :plugincategory: premium
+:pluginname: Export Word
+:plugincode: exportword
+include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
+
+:plugincategory: premium
 :pluginname: Footnotes
 :plugincode: footnotes
 include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
