--- a/modules/ROOT/partials/configuration/exportword.adoc
+++ b/modules/ROOT/partials/configuration/exportword.adoc
@@ -1,11 +1,9 @@
 [[exportword-service-url]]
 == `exportword_service_url`
 
-By default, the Word export feature uses the {productname} Cloud Services HTML to DOCX converter service to generate the Word files. You can use this option to provide the URL to an on-premises converter. https://www.tiny.cloud/contact/[Contact us] if you require this feature.
+By default, the Word export feature uses the {productname} Cloud Services HTML to DOCX converter service to generate the Word files. You can use this option to provide the URL to an on-premises converter.
 
 *Type:* `+String+`
-
-*Default value:* `placeholder`
 
 === Example: using `exportword_service_url`
 
@@ -16,7 +14,6 @@ tinymce.init({
   selector: 'textarea',
   plugins: 'code exportword',
   toolbar: 'exportword code',
-  content_css: '../css/demo.css'
   exportword_service_url: '<value>'
 });
 ----
