--- a/modules/ROOT/pages/available-menu-items.adoc
+++ b/modules/ROOT/pages/available-menu-items.adoc
@@ -106,6 +106,11 @@ include::partial$misc/plugin-menu-item-id-boilerplate.adoc[]
 include::partial$misc/plugin-menu-item-id-boilerplate.adoc[]
 
 :plugincategory: premium
+:pluginname: Export Word
+:plugincode: exportword
+include::partial$misc/plugin-menu-item-id-boilerplate.adoc[]
+
+:plugincategory: premium
 :pluginname: Footnotes
 :plugincode: footnotes
 include::partial$misc/plugin-menu-item-id-boilerplate.adoc[]
